# learning_cmake

./: .gitmodules  README.md
01_prepare_tutorial_by_qiita_maueki/: CMakeLists.txt  README.md  create_window.c
02_How_to_use_CMake_by_qiita_shohirose/: CMakeLists.txt  README.md
02_How_to_use_CMake_by_qiita_shohirose/01/: CMakeLists.txt  README.md
02_How_to_use_CMake_by_qiita_shohirose/01/src/: CMakeLists.txt
02_How_to_use_CMake_by_qiita_shohirose/src/: CMakeLists.txt
02_How_to_use_CMake_by_qiita_shohirose/test/: CMakeLists.txt
IntroductionToCMakeByExample__by_DerekMolloy/: README.md
IntroductionToCMakeByExample__by_DerekMolloy/Example1__TheHelloWorldExample/: CMakeLists.txt  helloworld.cpp
IntroductionToCMakeByExample__by_DerekMolloy/Example2__ProjectWithDirectories/include/: Student.h
IntroductionToCMakeByExample__by_DerekMolloy/Example2__ProjectWithDirectories/src/: Student.cpp  mainapp.cpp
IntroductionToCMakeByExample__by_DerekMolloy/ex1__TheHelloWorldExample/: CMakeLists.txt  README.md  hello_world.cpp
IntroductionToCMakeByExample__by_DerekMolloy/ex2__ProjectWithDirectories/: CMakeLists.txt  README.md
IntroductionToCMakeByExample__by_DerekMolloy/ex2__ProjectWithDirectories/src/: Student.cpp  mainapp.cpp
IntroductionToCMakeByExample__by_DerekMolloy/ex3__studentlib_shared/: CMakeLists.txt  README.md
IntroductionToCMakeByExample__by_DerekMolloy/ex4__studentlib_static/: CMakeLists.txt  README.md
IntroductionToCMakeByExample__by_DerekMolloy/ex4__studentlib_static/include/: Student.h
IntroductionToCMakeByExample__by_DerekMolloy/ex4__studentlib_static/src/: Student.cpp
check_version/: Makefile  check_opencv_version.cpp
tutorial/: CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.c  tutorial.cxx
tutorial/step1/: CMakeLists.txt  README.md  tutorial.cxx
tutorial/step2/: CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cxx
tutorial/step2/MathFunctions/: mysqrt.cxx
